force-app/main/default/objects/Debtor_Invoice__c/Debtor_Invoice__c.object-meta.xml
<CustomObject>
    <label>Debtor Invoice</label>
    <nameField>
        <displayFormat>DI-{0000}</displayFormat>
        <label>Debtor Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debtor Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>