force-app/main/default/objects/Debtor_Invoice__c/fields/Amount_Received_incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_incl_Tax__c</fullName>
    <label>Amount Received(incl.Tax)</label>
    <summarizedField>Debtor_Payment__c.Gross_Amount_Manual__c</summarizedField>
    <summaryForeignKey>Debtor_Payment__c.Debtor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>