force-app/main/default/objects/Debtor_Invoice__c/fields/BIll_No__c.field-meta.xml
<CustomField>
    <fullName>BIll_No__c</fullName>
    <label>BIll No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>