force-app/main/default/objects/Debtor_Invoice__c/fields/Email_Already_Send__c.field-meta.xml
<CustomField>
    <fullName>Email_Already_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Already Send</label>
    <type>Checkbox</type>
</CustomField>