force-app/main/default/objects/Debtor_Invoice__c/fields/Instrument_no_2__c.field-meta.xml
<CustomField>
    <fullName>Instrument_no_2__c</fullName>
    <label>Instrument no. 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>