force-app/main/default/objects/Debtor_Invoice__c/fields/Invoice_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Tax_Amount__c</fullName>
    <label>Invoice Tax Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>