force-app/main/default/objects/Debtor_Invoice__c/fields/Net_Debtor_incl_tax__c.field-meta.xml
<CustomField>
    <fullName>Net_Debtor_incl_tax__c</fullName>
    <formula>Total_Invoice_Amount__c -  Amount_Received_incl_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Debtor (incl. tax)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>