force-app/main/default/objects/Debtor_Invoice__c/fields/Total_Outstanding_Amount_including_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Amount_including_GST__c</fullName>
    <label>Total Outstanding Amount including GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>